# olympus-connect

./: .gitignore  README.md  config.json  pyproject.toml
olympus_connect/: __main__.py  cli.py  config.py  download.py  liveview.py
olympus_connect/src/: camera.py  log2gpx.py
scripts/: dev.sh  lint.sh  wifi-camera.sh
