[project]
name = 'olympus-connect'
version = '1.0.0'
authors = [
  { name='philogicae' },
]
description = 'Connect to wifi-enabled Olympus camera, show liveview, set the clock, take pictures, download images, change settings, turn it off.'
readme = 'README.md'
requires-python = '>=3.14'
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Intended Audience :: Developers',
  'Intended Audience :: End Users/Desktop',
  'License :: OSI Approved :: MIT License',
  'Operating System :: POSIX',
  'Programming Language :: Python :: 3.14',
]
dependencies = ['Pillow']
keywords = ['camera', 'wifi', 'olympus', 'liveview']

[project.scripts]
olympus-camera = 'olympus_connect.cli:main'
olympus-log2gpx = 'olympus_connect.src.log2gpx:main'

[project.urls]
'Homepage' = 'https://github.com/philogicae/olympus-connect'
'Bug Tracker' = 'https://github.com/philogicae/olympus-connect/issues'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["olympus_connect"]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "shellcheck-py",
    "ty",
    "types-pillow",
]

[tool.ruff]
target-version = "py314"
